[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WrapConfig"
version = "0.1.0"
description = "A Python configuration library"
authors = [{ name = "David", email = "dave@chatrecall.com" }]
dependencies = [

]

[tool.setuptools]
packages = ["WrapConfig"]
package-dir = {"" = "src"}
include-package-data = true
